init website with projects

--- a/index.html
+++ b/index.html
@@ -1,7 +1,65 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>WIP/h1>
-<p>More to come.</p>
-</body>
-</html>
+<html><head>
+    <style>
+      a{
+        background-color:#888;
+        text-decoration: none;
+        padding: 1px 3px 1px 3px;
+        color: white;
+      }
+
+      a:hover{
+        background-color:#596275;
+      }
+
+      .face{
+        width: 150px;
+        margin: 40px auto;
+        display: block;
+        border-radius: 50%;
+      }
+
+      body{
+        font-family: monospace;
+        word-wrap: break-word;
+        color: #444;
+        padding: 0;
+        margin-bottom: 100px;
+        line-height: 1.5em;
+        margin: 0 auto 60px auto;
+        width: 90vw;
+        max-width: 550px;
+        background-color:white;
+      }
+
+      h1,h2,h3,h4,h5,h6 {
+        color: black;
+      }
+
+      hr{
+        margin-top: 17px;
+        margin-bottom: 30px;
+        border:none;
+        height:6px;
+        background-color:black;
+      }
+
+      .fire.right{
+        float: right;
+      }
+
+      .fire.left{
+        float: left;
+      }
+    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+    <title>cgoldberg</title>
+  </head>
+  <body>
+    <br>
+    <h1 style="color:#FFF;background-color:#000">cgoldberg</h1>
+    <h2 id="projects">some of my projects</h2>
+
+    <a href="https://github.com/crlgb/delayed-function-start">delayed-function-start</a> delay the execution of queue-triggered azure functions<br><br>
+    <a href="https://github.com/goldberc/better-project-automation">better-project-automation</a> templating and automation for github (sub)-issues<br><br>
+</body></html>
