--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       }
 
       .face{
-        width: 150px;
-        margin: 40px auto;
+        width: 450px;
+        margin: 50px auto;
         display: block;
         border-radius: 50%;
       }
@@ -53,11 +53,12 @@
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+    <link rel="shortcut icon" type="image/x-icon" src="media/gh.ico">
     <title>cgoldberg</title>
   </head>
   <body>
-    <br>
-    <h1 style="color:#FFF;background-color:#000">cgoldberg</h1>
+    <img class="face" src="media/gh.png">
+    <h1 style="color:#FFF;background-color:#000;text-align: right;">cgoldberg</h1>
     <h2 id="projects">some of my projects</h2>
 
     <a href="https://github.com/crlgb/delayed-function-start">delayed-function-start</a> delay the execution of queue-triggered azure functions<br><br>
