--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
-    <link rel="shortcut icon" type="image/x-icon" src="media/gh.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="media/gh.ico">
     <title>cgoldberg</title>
   </head>
   <body>
