add medium link

--- a/index.html
+++ b/index.html
@@ -59,8 +59,13 @@
   <body>
     <img class="face" src="media/gh.png">
     <h1 style="color:#FFF;background-color:#000;text-align: right;">cgoldberg</h1>
+    
     <h2 id="projects">some of my projects</h2>
 
     <a href="https://github.com/crlgb/delayed-function-start">delayed-function-start</a> delay the execution of queue-triggered azure functions<br><br>
     <a href="https://github.com/goldberc/better-project-automation">better-project-automation</a> templating and automation for github (sub)-issues<br><br>
+    
+    <h2 id="projects">further reading</h2>
+
+    <a href="https://crlgb.medium.com/">crlgb.medium.com</a> in the unlikely event of me finding something interesting to share<br><br>
 </body></html>
